--- a/durandal/cliente/packages.config
+++ b/durandal/cliente/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="Durandal" version="2.2.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="Knockout.Validation" version="2.0.3" targetFramework="net472" />
@@ -33,6 +34,8 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="RequireJS" version="2.1.11" targetFramework="net472" />
+  <package id="RequireJS.Text" version="2.0.7" targetFramework="net472" />
   <package id="Sammy.js" version="0.7.5" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
